# orbbec-sdk-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
bindings/: bindings.rs  property_id_traits.rs  property_id_types.rs  structs.rs
codegen/: Cargo.toml
codegen/src/: custom.rs  helpers.rs  lib.rs  main.rs
examples/: README.md  depth.rs  depth_aligned.rs  depth_filtered.rs  device_info.rs  point_cloud.rs
examples/utils/: mod.rs
src/: calibration.rs  device.rs  error.rs  filter.rs  frame.rs  lib.rs  logger.rs  pipeline.rs  stream.rs  sys.rs
src/device/: device_property.rs
src/sys/: context.rs  device.rs  enums.rs  filter.rs  frame.rs  logger.rs  pipeline.rs  stream.rs
src/sys/orb/: bindings.rs  mod.rs
src/sys/prop/: mod.rs  property_id_types.rs  structs.rs
