[package]
name = "orbbec-sdk"
description = "High-level bindings to Orbbec SDK v2"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
categories = ["external-ffi-bindings", "computer-vision", "hardware-support"]
keywords = ["orbbec", "3d", "camera", "depth", "pointcloud"]
repository = "https://github.com/danielstuart14/orbbec-sdk-rs"
license = "MIT"
edition = "2024"
version = "0.1.0"

[dependencies]

[build-dependencies]
cmake = "0.1"
bindgen = { version = "0.71.0", optional = true }

[dev-dependencies]
colorous = "1.0.16"
show-image = "0.14.1"
kiss3d = "0.36.0"
nalgebra = "0.30"

[features]
default = []
buildtime-bindgen = ["bindgen"]
docs-only = []

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]
